添加新的文章，重新部署一下以前的生成脚本。

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <ul class="posts">
 	
 	<li>
-  	<a href="./posts/2015-12-10-switch-to-hakyll.html">博客迁移到hakyll上</a>
+  	<a href="./posts/2015-12-10-switch-to-hakyll.html">博客从octopress迁移到hakyll</a>
   	- <em>December 10, 2015</em>
 	</li>
 	
@@ -65,21 +65,6 @@
 	<li>
   	<a href="./posts/2015-06-23-migrate-a-discuz-site.html">迁移一个discuz站点</a>
   	- <em>June 23, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-06-07-learn-gulp.html">学习gulp</a>
-  	- <em>June  7, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-06-03-use-powerline.html">上powerline</a>
-  	- <em>June  3, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-06-01-learn-rails.html">学习rails</a>
-  	- <em>June  1, 2015</em>
 	</li>
 	
 	<li>
@@ -130,11 +115,6 @@
 	<li>
   	<a href="./posts/2015-01-20-use-btsync.html">"使用btsync"</a>
   	- <em>January 20, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-01-16-some-thought.html">一些感想</a>
-  	- <em>January 16, 2015</em>
 	</li>
 	
 	<li>
@@ -285,23 +265,10 @@
       <div class="row footer">
         <div class="col-lg-8 col-lg-offset-2">
           <div class="bottom">
-            Generated using <a href="http://jaspervdj.be/hakyll/">Hakyll</a>. Source available on <a href="https://github.com/eakron/variadic.me">GitHub</a>. Content reusable under <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">CC BY-SA 3.0</a>.
+            Generated using <a href="http://jaspervdj.be/hakyll/">Hakyll</a>. Source available on <a href="https://github.com/xcaptain/xcaptain.github.io">GitHub</a>.
           </div>
         </div>
       </div>
     </div>
-    <script type="text/javascript">
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-16166562-4']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
   </body>
 </html>
