--- a/posts.html
+++ b/posts.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="description" content="Code, design, systems">
-    <title>blog.iyue.club - Home</title>
+    <title>blog.iyue.club - Posts</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/core.css" />
     <link rel="image_src" href="./favicon.ico" />
@@ -42,8 +42,7 @@
       </div>
       <div class="row content">
         <div class="col-lg-8 col-lg-offset-2">
-          <div id="posts">
-  <ul class="posts">
+          <ul class="posts">
 	
 	<li>
   	<a href="./posts/2015-12-10-switch-to-hakyll.html">博客从octopress迁移到hakyll</a>
@@ -262,7 +261,7 @@
 	
 </ul>
 
-</div>
+
         </div>
       </div>
       <div class="row footer">
