--- a/tags.html
+++ b/tags.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="description" content="Code, design, systems">
-    <title>blog.iyue.club - About</title>
+    <title>blog.iyue.club - Tags</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/core.css" />
     <link rel="image_src" href="./favicon.ico" />
@@ -42,16 +42,10 @@
       </div>
       <div class="row content">
         <div class="col-lg-8 col-lg-offset-2">
-          <p>后端开发工程师(php, python)</p>
-<p>编程语言爱好者(ruby, scheme, racket, haskell, ml, erlang, shell)</p>
-<p>linux爱好者(ubuntu, mint, opensuse, archlinux)</p>
-<p>emacs爱好者</p>
-<p>fish忠实用户</p>
-<p>tmux用户</p>
-<p>cmd爱好者</p>
-<p>vim轻度粉丝</p>
-<p>数学生(mathematica, julia, ipython, texmacs)</p>
-<p>伪文艺青年</p>
+          <h2>Tags</h2>
+
+<a style="font-size: 100%" href="./tags/blog.html">blog</a> <a style="font-size: 150%" href="./tags/emacs.html">emacs</a> <a style="font-size: 100%" href="./tags/fish.html">fish</a> <a style="font-size: 133%" href="./tags/fun.html">fun</a> <a style="font-size: 100%" href="./tags/git.html">git</a> <a style="font-size: 100%" href="./tags/git%20docker%20vagrant.html">git docker vagrant</a> <a style="font-size: 116%" href="./tags/haskell.html">haskell</a> <a style="font-size: 100%" href="./tags/laravel.html">laravel</a> <a style="font-size: 283%" href="./tags/linux.html">linux</a> <a style="font-size: 133%" href="./tags/linux%20web.html">linux web</a> <a style="font-size: 100%" href="./tags/mysql.html">mysql</a> <a style="font-size: 100%" href="./tags/octopress.html">octopress</a> <a style="font-size: 100%" href="./tags/orgmode.html">orgmode</a> <a style="font-size: 233%" href="./tags/php.html">php</a> <a style="font-size: 116%" href="./tags/postgresql.html">postgresql</a> <a style="font-size: 133%" href="./tags/python.html">python</a> <a style="font-size: 100%" href="./tags/shell.html">shell</a> <a style="font-size: 100%" href="./tags/sql.html">sql</a> <a style="font-size: 100%" href="./tags/tips.html">tips</a> <a style="font-size: 100%" href="./tags/unix.html">unix</a> <a style="font-size: 116%" href="./tags/virtualization.html">virtualization</a> <a style="font-size: 166%" href="./tags/web.html">web</a>
+
         </div>
       </div>
       <div class="row footer">
