--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
   <ul class="posts">
 	
 	<li>
+  	<a href="./posts/2015-12-26-switch-to-spacemacs.html">从prelude切换到spacemacs</a>
+  	- <em>December 26, 2015</em>
+	</li>
+	
+	<li>
+  	<a href="./posts/2015-12-15-create-composer-package.html">创建自己的composer包</a>
+  	- <em>December 15, 2015</em>
+	</li>
+	
+	<li>
   	<a href="./posts/2015-12-10-switch-to-hakyll.html">博客从octopress迁移到hakyll</a>
   	- <em>December 10, 2015</em>
 	</li>
