--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
   <ul class="posts">
 	
 	<li>
+  	<a href="./posts/2016-04-27-emacs-connect-irc.html">emacs连接irc频道</a>
+  	- <em>April 27, 2016</em>
+	</li>
+	
+	<li>
   	<a href="./posts/2015-12-26-switch-to-spacemacs.html">从prelude切换到spacemacs</a>
   	- <em>December 26, 2015</em>
 	</li>
@@ -111,12 +116,12 @@
 	</li>
 	
 	<li>
-  	<a href="./posts/2015-03-07-emacs-grep-find.html">"emacs自定义grep-find的模板"</a>
+  	<a href="./posts/2015-03-07-emacs-grep-find.html">emacs自定义grep-find的模板</a>
   	- <em>March  7, 2015</em>
 	</li>
 	
 	<li>
-  	<a href="./posts/2015-01-28-emacs-eww.html">"学习emacs-eww"</a>
+  	<a href="./posts/2015-01-28-emacs-eww.html">学习emacs-eww</a>
   	- <em>January 28, 2015</em>
 	</li>
 	
