自动部署新博文

--- a/index.html
+++ b/index.html
@@ -46,8 +46,18 @@
   <ul class="posts">
 	
 	<li>
-  	<a href="./posts/2016-04-27-emacs-connect-irc.html">emacs连接irc频道</a>
-  	- <em>April 27, 2016</em>
+  	<a href="./posts/2016-06-06-like-favorite-design.html">点赞收藏存储设计</a>
+  	- <em>June  6, 2016</em>
+	</li>
+	
+	<li>
+  	<a href="./posts/2016-06-05-my-chromebook.html">我的chromebook</a>
+  	- <em>June  5, 2016</em>
+	</li>
+	
+	<li>
+  	<a href="./posts/2016-04-28-php-guzzle-http.html">php使用guzzle发送http请求</a>
+  	- <em>April 28, 2016</em>
 	</li>
 	
 	<li>
