自动部署发布文章

--- a/posts.html
+++ b/posts.html
@@ -43,197 +43,207 @@
       <div class="row content">
         <div class="col-lg-8 col-lg-offset-2">
           <ul class="posts">
-
+	
+	<li>
+  	<a href="./posts/2016-07-18-delve-into-eloquent.html">eloquent高级用法</a>
+  	- <em>July 18, 2016</em>
+	</li>
+	
+	<li>
+  	<a href="./posts/2016-07-08-laravel-password.html">laravel密码生成与校验机制</a>
+  	- <em>July  8, 2016</em>
+	</li>
+	
 	<li>
   	<a href="./posts/2016-06-06-like-favorite-design.html">点赞收藏存储设计</a>
   	- <em>June  6, 2016</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2016-06-05-my-chromebook.html">我的chromebook</a>
   	- <em>June  5, 2016</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2016-04-28-php-guzzle-http.html">php使用guzzle发送http请求</a>
   	- <em>April 28, 2016</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-12-26-switch-to-spacemacs.html">从prelude切换到spacemacs</a>
   	- <em>December 26, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-12-15-create-composer-package.html">创建自己的composer包</a>
   	- <em>December 15, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-12-10-switch-to-hakyll.html">博客从octopress迁移到hakyll</a>
   	- <em>December 10, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-09-14-php-use-rabbitmq.html">php使用rabbitmq队列处理数据推送</a>
   	- <em>September 14, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-07-22-use-postgresql.html">学习使用postgresql</a>
   	- <em>July 22, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-07-14-php-coding-style.html">php编码规范</a>
   	- <em>July 14, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-06-23-migrate-a-discuz-site.html">迁移一个discuz站点</a>
   	- <em>June 23, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-06-01-learn-git.html">学习git</a>
   	- <em>June  1, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-05-23-php-getter.html">php的getter方法</a>
   	- <em>May 23, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-05-03-mysql-basics-1.html">mysql基础</a>
   	- <em>May  3, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-04-17-php-meta-programming-1.html">一个简单的元编程的例子</a>
   	- <em>April 17, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-03-26-btrfs-crash.html">btrfs损坏之后的一系列麻烦</a>
   	- <em>March 26, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-03-15-use-orgmode.html">use-orgmode</a>
   	- <em>March 15, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-03-07-emacs-grep-find.html">emacs自定义grep-find的模板</a>
   	- <em>March  7, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-01-28-emacs-eww.html">学习emacs-eww</a>
   	- <em>January 28, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-01-13-python-encoding.html">python2编码问题</a>
   	- <em>January 13, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-01-05-play-with-git.html">玩弄git</a>
   	- <em>January  5, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-01-03-deploy-email-service.html">部署邮件服务</a>
   	- <em>January  3, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-01-03-debug-shadowsocks.html">调试shadowsocks</a>
   	- <em>January  3, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2015-01-01-arch-pacman-broken.html">解决pacman依赖关系破裂问题</a>
   	- <em>January  1, 2015</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2014-12-31-try-hhvm.html">尝试hhvm</a>
   	- <em>December 31, 2014</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2014-12-30-web-crawl-again.html">采集一个论坛的帖子来进行数据分析</a>
   	- <em>December 30, 2014</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2014-12-26-install-coreos-with-vagrant.html">通过vagrant安装coreos</a>
   	- <em>December 26, 2014</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2014-12-25-learn-virtualization-1.html">第一次接触虚拟化</a>
   	- <em>December 25, 2014</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2014-12-20-how-to-use-emacs.html">如何使用emacs</a>
   	- <em>December 20, 2014</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2014-11-01-debug-discuz-1.html">调试discuz（一）</a>
   	- <em>November  1, 2014</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2014-10-26-learn-haskell-2.html">学习haskell（二）</a>
   	- <em>October 26, 2014</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2014-10-25-learn-haskell-1.html">学习haskell（一）</a>
   	- <em>October 25, 2014</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2014-10-18-emergency-case-1.html">再来记录一次紧急情况</a>
   	- <em>October 18, 2014</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2014-09-29-connect-to-vpn.html">connect-to-vpn</a>
   	- <em>September 29, 2014</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2014-08-31-use-fish-shell.html">使用fish</a>
   	- <em>August 31, 2014</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2014-08-25-customize-keyboard-layout.html">customize keyboard layout</a>
   	- <em>August 25, 2014</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2014-08-21-ssh-login-without-password.html">不用密码ssh登陆服务器</a>
   	- <em>August 21, 2014</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2014-08-16-freebsd-basic-operations.html">freebsd-basic-operations</a>
   	- <em>August 16, 2014</em>
 	</li>
-
+	
 	<li>
   	<a href="./posts/2014-08-11-first-eye-on-octopress.html">first eye on octopress</a>
   	- <em>August 11, 2014</em>
 	</li>
-
+	
 </ul>
 
 
