manual depoly for new post about github coupon

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
   <ul class="posts">
 	
 	<li>
+  	<a href="./posts/2016-08-11-github-coupon.html">如何不要脸与低三下四</a>
+  	- <em>August 11, 2016</em>
+	</li>
+	
+	<li>
   	<a href="./posts/2016-08-07-recursive-remove-space.html">递归地删除数组里面所有多余的空格</a>
   	- <em>August  7, 2016</em>
 	</li>
