--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
   <ul class="posts">
 	
 	<li>
+  	<a href="./posts/2016-08-22-php-pdo-results.html">php从mysql中获取真实字段类型</a>
+  	- <em>August 22, 2016</em>
+	</li>
+	
+	<li>
   	<a href="./posts/2016-08-11-github-coupon.html">如何不要脸与低三下四</a>
   	- <em>August 11, 2016</em>
 	</li>
