--- a/index.html
+++ b/index.html
@@ -5,288 +5,291 @@
     <meta charset="UTF-8">
     <meta name="description" content="Code, design, systems">
     <title>blog.iyue.club - Home</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" type="text/css">
+    <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
     <link rel="stylesheet" href="./css/core.css" />
     <link rel="image_src" href="./favicon.ico" />
     <link rel="alternate" type="application/rss+xml" title="iyue.club" href="./rss.xml" />
-
   </head>
   <body>
-    <div class="container">
-      <div class="row head">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="page-header">
-            <h1>
-              <a href="./">blog.iyue.club
-              </a>
-            </h1>
-          </div>
-          <ul class="nav nav-pills header">
-            <li>
-              <a href="./">Home</a>
-            </li>
-            <li>
-              <a href="./posts.html">Posts</a>
-            </li>
-            <li>
-              <a href="./tags.html">Tags</a>
-            </li>
-            <li>
-              <a href="./about.html">About</a>
-            </li>
-            <li>
-              <a href="./rss.xml">RSS</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="row content">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div id="posts">
-  <ul class="posts">
-	
-	<li>
-  	<a href="./posts/2016-09-30-php-monkey-patch.html">php的猴子补丁</a>
-  	- <em>September 30, 2016</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2016-09-09-php-multi-process-task.html">php多进程处理大任务</a>
-  	- <em>September  9, 2016</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2016-09-03-install-and-use-elasticsearch.html">安装和配置elasticsearch</a>
-  	- <em>September  3, 2016</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2016-08-22-php-pdo-results.html">php从mysql中获取真实字段类型</a>
-  	- <em>August 22, 2016</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2016-08-11-github-coupon.html">如何不要脸与低三下四</a>
-  	- <em>August 11, 2016</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2016-08-07-recursive-remove-space.html">递归地删除数组里面所有多余的空格</a>
-  	- <em>August  7, 2016</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2016-07-18-delve-into-eloquent.html">eloquent高级用法</a>
-  	- <em>July 18, 2016</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2016-07-08-laravel-password.html">laravel密码生成与校验机制</a>
-  	- <em>July  8, 2016</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2016-06-06-like-favorite-design.html">点赞收藏存储设计</a>
-  	- <em>June  6, 2016</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2016-06-05-my-chromebook.html">我的chromebook</a>
-  	- <em>June  5, 2016</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2016-04-28-php-guzzle-http.html">php使用guzzle发送http请求</a>
-  	- <em>April 28, 2016</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-12-26-switch-to-spacemacs.html">从prelude切换到spacemacs</a>
-  	- <em>December 26, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-12-15-create-composer-package.html">创建自己的composer包</a>
-  	- <em>December 15, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-12-10-switch-to-hakyll.html">博客从octopress迁移到hakyll</a>
-  	- <em>December 10, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-09-14-php-use-rabbitmq.html">php使用rabbitmq队列处理数据推送</a>
-  	- <em>September 14, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-07-22-use-postgresql.html">学习使用postgresql</a>
-  	- <em>July 22, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-07-14-php-coding-style.html">php编码规范</a>
-  	- <em>July 14, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-06-23-migrate-a-discuz-site.html">迁移一个discuz站点</a>
-  	- <em>June 23, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-06-01-learn-git.html">学习git</a>
-  	- <em>June  1, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-05-23-php-getter.html">php的getter方法</a>
-  	- <em>May 23, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-05-03-mysql-basics-1.html">mysql基础</a>
-  	- <em>May  3, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-04-17-php-meta-programming-1.html">一个简单的元编程的例子</a>
-  	- <em>April 17, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-03-26-btrfs-crash.html">btrfs损坏之后的一系列麻烦</a>
-  	- <em>March 26, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-03-15-use-orgmode.html">use-orgmode</a>
-  	- <em>March 15, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-03-07-emacs-grep-find.html">emacs自定义grep-find的模板</a>
-  	- <em>March  7, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-01-28-emacs-eww.html">学习emacs-eww</a>
-  	- <em>January 28, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-01-13-python-encoding.html">python2编码问题</a>
-  	- <em>January 13, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-01-05-play-with-git.html">玩弄git</a>
-  	- <em>January  5, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-01-03-deploy-email-service.html">部署邮件服务</a>
-  	- <em>January  3, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-01-03-debug-shadowsocks.html">调试shadowsocks</a>
-  	- <em>January  3, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2015-01-01-arch-pacman-broken.html">解决pacman依赖关系破裂问题</a>
-  	- <em>January  1, 2015</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2014-12-31-try-hhvm.html">尝试hhvm</a>
-  	- <em>December 31, 2014</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2014-12-30-web-crawl-again.html">采集一个论坛的帖子来进行数据分析</a>
-  	- <em>December 30, 2014</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2014-12-26-install-coreos-with-vagrant.html">通过vagrant安装coreos</a>
-  	- <em>December 26, 2014</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2014-12-25-learn-virtualization-1.html">第一次接触虚拟化</a>
-  	- <em>December 25, 2014</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2014-12-20-how-to-use-emacs.html">如何使用emacs</a>
-  	- <em>December 20, 2014</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2014-11-01-debug-discuz-1.html">调试discuz（一）</a>
-  	- <em>November  1, 2014</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2014-10-26-learn-haskell-2.html">学习haskell（二）</a>
-  	- <em>October 26, 2014</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2014-10-25-learn-haskell-1.html">学习haskell（一）</a>
-  	- <em>October 25, 2014</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2014-10-18-emergency-case-1.html">再来记录一次紧急情况</a>
-  	- <em>October 18, 2014</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2014-09-29-connect-to-vpn.html">connect-to-vpn</a>
-  	- <em>September 29, 2014</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2014-08-31-use-fish-shell.html">使用fish</a>
-  	- <em>August 31, 2014</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2014-08-25-customize-keyboard-layout.html">customize keyboard layout</a>
-  	- <em>August 25, 2014</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2014-08-21-ssh-login-without-password.html">不用密码ssh登陆服务器</a>
-  	- <em>August 21, 2014</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2014-08-16-freebsd-basic-operations.html">freebsd-basic-operations</a>
-  	- <em>August 16, 2014</em>
-	</li>
-	
-	<li>
-  	<a href="./posts/2014-08-11-first-eye-on-octopress.html">first eye on octopress</a>
-  	- <em>August 11, 2014</em>
-	</li>
-	
-</ul>
+    <header>
+      <h1>
+        <a href="./">blog.iyue.club
+        </a>
+      </h1>
 
-</div>
-        </div>
-      </div>
-      <div class="row footer">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="bottom">
-            Generated using <a href="http://jaspervdj.be/hakyll/">Hakyll</a>. Source available on <a href="https://github.com/xcaptain/xcaptain.github.io">GitHub</a>.
-          </div>
-        </div>
-      </div>
-    </div>
+      <nav>
+        <ul>
+          <li>
+            <a href="./">Home</a>
+          </li>
+          <li>
+            <a href="./posts.html">Posts</a>
+          </li>
+          <li>
+            <a href="./tags.html">Tags</a>
+          </li>
+          <li>
+            <a href="./about.html">About</a>
+          </li>
+          <li>
+            <a href="./rss.xml">RSS</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <section>
+      <article>
+  
+	<p>
+    <a href="./posts/2017-05-01-larave-router-and-requests.html">laravel路由与请求处理</a>
+  	- <em>May  1, 2017</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2016-11-19-xps13-9360-first-eye.html">新入手xps13 9360的体验</a>
+  	- <em>November 19, 2016</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2016-09-30-php-monkey-patch.html">php的猴子补丁</a>
+  	- <em>September 30, 2016</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2016-09-09-php-multi-process-task.html">php多进程处理大任务</a>
+  	- <em>September  9, 2016</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2016-09-03-install-and-use-elasticsearch.html">安装和配置elasticsearch</a>
+  	- <em>September  3, 2016</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2016-08-22-php-pdo-results.html">php从mysql中获取真实字段类型</a>
+  	- <em>August 22, 2016</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2016-08-11-github-coupon.html">如何不要脸与低三下四</a>
+  	- <em>August 11, 2016</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2016-08-07-recursive-remove-space.html">递归地删除数组里面所有多余的空格</a>
+  	- <em>August  7, 2016</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2016-07-18-delve-into-eloquent.html">eloquent高级用法</a>
+  	- <em>July 18, 2016</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2016-07-08-laravel-password.html">laravel密码生成与校验机制</a>
+  	- <em>July  8, 2016</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2016-06-06-like-favorite-design.html">点赞收藏存储设计</a>
+  	- <em>June  6, 2016</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2016-06-05-my-chromebook.html">我的chromebook</a>
+  	- <em>June  5, 2016</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2016-04-28-php-guzzle-http.html">php使用guzzle发送http请求</a>
+  	- <em>April 28, 2016</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-12-26-switch-to-spacemacs.html">从prelude切换到spacemacs</a>
+  	- <em>December 26, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-12-15-create-composer-package.html">创建自己的composer包</a>
+  	- <em>December 15, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-12-10-switch-to-hakyll.html">博客从octopress迁移到hakyll</a>
+  	- <em>December 10, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-09-14-php-use-rabbitmq.html">php使用rabbitmq队列处理数据推送</a>
+  	- <em>September 14, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-07-22-use-postgresql.html">学习使用postgresql</a>
+  	- <em>July 22, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-07-14-php-coding-style.html">php编码规范</a>
+  	- <em>July 14, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-06-23-migrate-a-discuz-site.html">迁移一个discuz站点</a>
+  	- <em>June 23, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-06-01-learn-git.html">学习git</a>
+  	- <em>June  1, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-05-23-php-getter.html">php的getter方法</a>
+  	- <em>May 23, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-05-03-mysql-basics-1.html">mysql基础</a>
+  	- <em>May  3, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-04-17-php-meta-programming-1.html">一个简单的元编程的例子</a>
+  	- <em>April 17, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-03-26-btrfs-crash.html">btrfs损坏之后的一系列麻烦</a>
+  	- <em>March 26, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-03-15-use-orgmode.html">use-orgmode</a>
+  	- <em>March 15, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-03-07-emacs-grep-find.html">emacs自定义grep-find的模板</a>
+  	- <em>March  7, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-01-28-emacs-eww.html">学习emacs-eww</a>
+  	- <em>January 28, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-01-13-python-encoding.html">python2编码问题</a>
+  	- <em>January 13, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-01-05-play-with-git.html">玩弄git</a>
+  	- <em>January  5, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-01-03-deploy-email-service.html">部署邮件服务</a>
+  	- <em>January  3, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-01-03-debug-shadowsocks.html">调试shadowsocks</a>
+  	- <em>January  3, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2015-01-01-arch-pacman-broken.html">解决pacman依赖关系破裂问题</a>
+  	- <em>January  1, 2015</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2014-12-31-try-hhvm.html">尝试hhvm</a>
+  	- <em>December 31, 2014</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2014-12-30-web-crawl-again.html">采集一个论坛的帖子来进行数据分析</a>
+  	- <em>December 30, 2014</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2014-12-26-install-coreos-with-vagrant.html">通过vagrant安装coreos</a>
+  	- <em>December 26, 2014</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2014-12-25-learn-virtualization-1.html">第一次接触虚拟化</a>
+  	- <em>December 25, 2014</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2014-12-20-how-to-use-emacs.html">如何使用emacs</a>
+  	- <em>December 20, 2014</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2014-11-01-debug-discuz-1.html">调试discuz（一）</a>
+  	- <em>November  1, 2014</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2014-10-26-learn-haskell-2.html">学习haskell（二）</a>
+  	- <em>October 26, 2014</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2014-10-25-learn-haskell-1.html">学习haskell（一）</a>
+  	- <em>October 25, 2014</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2014-10-18-emergency-case-1.html">再来记录一次紧急情况</a>
+  	- <em>October 18, 2014</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2014-09-29-connect-to-vpn.html">connect-to-vpn</a>
+  	- <em>September 29, 2014</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2014-08-31-use-fish-shell.html">使用fish</a>
+  	- <em>August 31, 2014</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2014-08-25-customize-keyboard-layout.html">customize keyboard layout</a>
+  	- <em>August 25, 2014</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2014-08-21-ssh-login-without-password.html">不用密码ssh登陆服务器</a>
+  	- <em>August 21, 2014</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2014-08-16-freebsd-basic-operations.html">freebsd-basic-operations</a>
+  	- <em>August 16, 2014</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2014-08-11-first-eye-on-octopress.html">first eye on octopress</a>
+  	- <em>August 11, 2014</em>
+	</p>
+	
+</article>
+
+
+    </section>
+
+    <footer>
+      Generated using <a href="http://jaspervdj.be/hakyll/">Hakyll</a>. Source available on <a href="https://github.com/xcaptain/xcaptain.github.io">GitHub</a>.
+    </footer>
   </body>
 </html>
