--- a/tags.html
+++ b/tags.html
@@ -5,56 +5,50 @@
     <meta charset="UTF-8">
     <meta name="description" content="Code, design, systems">
     <title>blog.iyue.club - Tags</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" type="text/css">
+    <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
     <link rel="stylesheet" href="./css/core.css" />
     <link rel="image_src" href="./favicon.ico" />
     <link rel="alternate" type="application/rss+xml" title="iyue.club" href="./rss.xml" />
-
   </head>
   <body>
-    <div class="container">
-      <div class="row head">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="page-header">
-            <h1>
-              <a href="./">blog.iyue.club
-              </a>
-            </h1>
-          </div>
-          <ul class="nav nav-pills header">
-            <li>
-              <a href="./">Home</a>
-            </li>
-            <li>
-              <a href="./posts.html">Posts</a>
-            </li>
-            <li>
-              <a href="./tags.html">Tags</a>
-            </li>
-            <li>
-              <a href="./about.html">About</a>
-            </li>
-            <li>
-              <a href="./rss.xml">RSS</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="row content">
-        <div class="col-lg-8 col-lg-offset-2">
-          <h2>Tags</h2>
+    <header>
+      <h1>
+        <a href="./">blog.iyue.club
+        </a>
+      </h1>
 
-<a style="font-size: 100%" href="./tags/blog.html">blog</a> <a style="font-size: 100%" href="./tags/chromebook.html">chromebook</a> <a style="font-size: 100%" href="./tags/docker.html">docker</a> <a style="font-size: 100%" href="./tags/elasticsearch.html">elasticsearch</a> <a style="font-size: 162%" href="./tags/emacs.html">emacs</a> <a style="font-size: 100%" href="./tags/fish.html">fish</a> <a style="font-size: 112%" href="./tags/git.html">git</a> <a style="font-size: 112%" href="./tags/haskell.html">haskell</a> <a style="font-size: 100%" href="./tags/laravel.html">laravel</a> <a style="font-size: 250%" href="./tags/linux.html">linux</a> <a style="font-size: 112%" href="./tags/mysql.html">mysql</a> <a style="font-size: 100%" href="./tags/octopress.html">octopress</a> <a style="font-size: 100%" href="./tags/orgmode.html">orgmode</a> <a style="font-size: 287%" href="./tags/php.html">php</a> <a style="font-size: 112%" href="./tags/postgresql.html">postgresql</a> <a style="font-size: 112%" href="./tags/python.html">python</a> <a style="font-size: 100%" href="./tags/shell.html">shell</a> <a style="font-size: 100%" href="./tags/sql.html">sql</a> <a style="font-size: 100%" href="./tags/tips.html">tips</a> <a style="font-size: 100%" href="./tags/unix.html">unix</a> <a style="font-size: 100%" href="./tags/vagrant.html">vagrant</a> <a style="font-size: 112%" href="./tags/virtualization.html">virtualization</a> <a style="font-size: 237%" href="./tags/web.html">web</a>
+      <nav>
+        <ul>
+          <li>
+            <a href="./">Home</a>
+          </li>
+          <li>
+            <a href="./posts.html">Posts</a>
+          </li>
+          <li>
+            <a href="./tags.html">Tags</a>
+          </li>
+          <li>
+            <a href="./about.html">About</a>
+          </li>
+          <li>
+            <a href="./rss.xml">RSS</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-        </div>
-      </div>
-      <div class="row footer">
-        <div class="col-lg-8 col-lg-offset-2">
-          <div class="bottom">
-            Generated using <a href="http://jaspervdj.be/hakyll/">Hakyll</a>. Source available on <a href="https://github.com/xcaptain/xcaptain.github.io">GitHub</a>.
-          </div>
-        </div>
-      </div>
-    </div>
+    <section>
+      <h2>Tags</h2>
+
+<a style="font-size: 100%" href="./tags/blog.html">blog</a> <a style="font-size: 100%" href="./tags/chromebook.html">chromebook</a> <a style="font-size: 100%" href="./tags/docker.html">docker</a> <a style="font-size: 100%" href="./tags/elasticsearch.html">elasticsearch</a> <a style="font-size: 158%" href="./tags/emacs.html">emacs</a> <a style="font-size: 100%" href="./tags/fish.html">fish</a> <a style="font-size: 111%" href="./tags/git.html">git</a> <a style="font-size: 111%" href="./tags/haskell.html">haskell</a> <a style="font-size: 111%" href="./tags/laravel.html">laravel</a> <a style="font-size: 252%" href="./tags/linux.html">linux</a> <a style="font-size: 111%" href="./tags/mysql.html">mysql</a> <a style="font-size: 100%" href="./tags/octopress.html">octopress</a> <a style="font-size: 100%" href="./tags/orgmode.html">orgmode</a> <a style="font-size: 288%" href="./tags/php.html">php</a> <a style="font-size: 111%" href="./tags/postgresql.html">postgresql</a> <a style="font-size: 111%" href="./tags/python.html">python</a> <a style="font-size: 100%" href="./tags/shell.html">shell</a> <a style="font-size: 100%" href="./tags/sql.html">sql</a> <a style="font-size: 100%" href="./tags/tips.html">tips</a> <a style="font-size: 100%" href="./tags/unix.html">unix</a> <a style="font-size: 100%" href="./tags/vagrant.html">vagrant</a> <a style="font-size: 111%" href="./tags/virtualization.html">virtualization</a> <a style="font-size: 229%" href="./tags/web.html">web</a>
+
+    </section>
+
+    <footer>
+      Generated using <a href="http://jaspervdj.be/hakyll/">Hakyll</a>. Source available on <a href="https://github.com/xcaptain/xcaptain.github.io">GitHub</a>.
+    </footer>
   </body>
 </html>
