--- a/posts.html
+++ b/posts.html
@@ -44,6 +44,16 @@
       <article>
   
 	<p>
+    <a href="./posts/2017-06-30-php-pitfalls.html">php陷阱与缺陷</a>
+  	- <em>June 30, 2017</em>
+	</p>
+	
+	<p>
+    <a href="./posts/2017-06-06-learning-idris.html">学习idris</a>
+  	- <em>June  6, 2017</em>
+	</p>
+	
+	<p>
     <a href="./posts/2017-05-01-larave-router-and-requests.html">laravel路由与请求处理</a>
   	- <em>May  1, 2017</em>
 	</p>
