--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <h1>
-        <a href="./">blog.iyue.club
+        <a href="./">Joey's Blog
         </a>
       </h1>
 
@@ -43,7 +43,7 @@
     <section>
       <p>后端开发工程师(php, python)</p>
 <p>编程语言爱好者(ruby, scheme, racket, haskell, ml, erlang, shell)</p>
-<p>linux爱好者(ubuntu, mint, opensuse, archlinux)</p>
+<p>arch linux 爱好者</p>
 <p>emacs爱好者</p>
 <p>fish忠实用户</p>
 <p>tmux用户</p>
