--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
       <article>
   
 	<p>
+    <a href="./posts/2017-10-07-rebuild-discourse.html">再次基于discourse构建自己的论坛</a>
+  	- <em>October  7, 2017</em>
+	</p>
+	
+	<p>
     <a href="./posts/2017-08-28-headless-chrome.html">使用headless chromium来抓取网页</a>
   	- <em>August 28, 2017</em>
 	</p>
